# jibi2

./: BOOKMARK.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
benchmarks/: fibonacci.jibi  fibonacci.py  run.sh  sqrt.jibi
jibi2-core/: Cargo.toml
jibi2-core/src/: chunk.rs  compiler.rs  error.rs  instruction.rs  lib.rs  object.rs  stack.rs  vm.rs
jibi2-core/src/debug/: dis.rs  mod.rs
jibi2-core/src/native/: base.rs  dis.rs  math.rs  mod.rs  time.rs
jibi2-core/src/ops/: math.rs  mod.rs
jibi2-core/src/reader/: mod.rs  parser.rs  tokenizer.rs
src/: chunk.rs  compiler.rs  debug.rs  error.rs  instruction.rs  lib.rs  main.rs  object.rs  prelude.jibi  value.rs  vm.rs
src/compiler/: mod.rs
src/debug/: dis.rs
src/ops/: math.rs  mod.rs
src/reader/: mod.rs  tokenizer.rs
tests/: closures.jibi  fibonacci.jibi  long_constants_add.jibi  tail_call.jibi
