[package]
name = "jibi2"
description = "Interpreter for the jibi2 Scheme dialect."
version = "0.1.0"
authors = ["Jérome Boisvert-Chouinard"]
repository = "https://github.com/jbchouinard/jibi2"
license = "MIT"
readme = "README.md"
edition = "2018"

[workspace]

[dependencies]
jibi2-core = { path = "jibi2-core" }
home = "0.5.3"
rustyline = "8.2"
structopt = "0.3"
